<resources>
    <string name="app_name">Mao</string>

    <!-- nsd -->
    <string name="connect">Connect</string>
    <string name="discover">Discover</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="hint_device_name">input my device name</string>
    <string name="save">save</string>
    <string name="capture">Capture</string>
    <string name="video">video</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="root">root</string>
    <string name="compute_with_fuse">compute file size with fuse</string>
    <string name="compute_without_fuse">compute file size without fuse</string>
    <string name="checkroot">check root</string>
</resources>
