<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ichangmao.app.ui.NsdFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="96dp"
                android:layout_height="64dp"
                android:text="@string/register" />

            <Button
                android:id="@+id/btn_discover"
                android:layout_width="96dp"
                android:layout_height="64dp"
                android:text="@string/discover" />

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="96dp"
                android:layout_height="64dp"
                android:text="@string/connect" />
        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:focusable="true" />

        <EditText
            android:id="@+id/chatInput"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="96dp"
            android:layout_height="64dp"
            android:text="@string/send" />

    </LinearLayout>

</FrameLayout>
